--- a/_site.yml
+++ b/_site.yml
@@ -2,8 +2,8 @@ name: "Introduction to Data Science with R"
 navbar:
   title: "EDLD 651"
   left:
-    # - icon: fa-home
-    #   href: index.html
+    - icon: fa-home
+      href: index.html
     - text: "Syllabus"
       href: syllabus.html
   right:
