--- a/_site.yml
+++ b/_site.yml
@@ -14,5 +14,7 @@ navbar:
     - icon: fa-github
       href: https://github.com/uo-datasci-specialization/c1-intro-fall-2021
 output:
-  html_document
-#    theme: paper
+  html_document:
+    lib_dir: site_libs
+    self_contained: no
+    theme: paper
