--- a/_site.yml
+++ b/_site.yml
@@ -4,12 +4,12 @@ navbar:
   left:
     - icon: fa-home
       href: index.html
-    - text: "Syllabus"
+    - text: Syllabus
       href: syllabus.html
   right:
-    - text: "Schedule"
+    - text: Schedule
       href: schedule.html
-    - text: "Assignments"
+    - text: Assignments
       href: assignments.html
     - icon: fa-github
       href: https://github.com/uo-datasci-specialization/c1-intro-fall-2021
