--- a/_site.yml
+++ b/_site.yml
@@ -10,6 +10,8 @@ navbar:
       href: schedule.html
     - text: Assignments
       href: assignments.html
+    - text: Data
+      href: data_list.html
     - text: Installs
       href: installs.html
     - icon: fa-github
